syntax = "proto3";

package acar;

option go_package = "github.com/chez-shanpu/acar/api";

import "types/result.proto";

service ControlPlane{
  rpc RegisterSRPolicy(AppInfo) returns (types.Result);
}

message AppInfo {
  string app_name = 1;
  string src_addr = 2;
  string dst_addr=3;
  repeated string sid_list=4;
}

