syntax = "proto3";

package acar;

option go_package = "github.com/chez-shanpu/acar/api";

import "google/protobuf/timestamp.proto";

service DataPlane{
  rpc ApplySRPolicy(ApplySRPolicyRequest) returns (ApplySRPolicyResponse);
}

message ApplySRPolicyRequest {
  SRInfo sr_info = 1;
}

message ApplySRPolicyResponse {
  google.protobuf.Timestamp time = 1;
}

message SRInfo {
  string src_addr = 1;
  string dst_addr = 2;
  repeated string sid_list = 3;
}

